python/antlr/deParser.py
# Generated from ../antlr/de.g4 by ANTLR 4.6
# encoding: utf-8
from __future__ import print_function
from antlr4 import *
from io import StringIO



class deParser ( Parser ):

    grammarFileName = "de.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ u"<INVALID>", u"'project'", u"'bar'", u"'of'", u"'by'", 
                     u"'in'", u"'subBy'", u"'header'", u"'run'", u"'as'", 
                     u"'object'", u"'distribution'", u"','", u"'all'", u"'desc'", 
                     u"'mean'", u"'std'", u"'median'", u"'var'", u"'load'", 
                     u"'to'", u"'||'", u"'&&'", u"'=='", u"'!='", u"'>'", 
                     u"'<'", u"'>='", u"'<='", u"'+'", u"'-'", u"'*'", u"'/'", 
                     u"'%'", u"'^'", u"'!'", u"';'", u"'='", u"'('", u"')'", 
                     u"'{'", u"'}'", u"'true'", u"'false'", u"'nil'", u"'if'", 
                     u"'else'", u"'while'", u"'def'", u"'log'", u"'until'" ]

    symbolicNames = [ u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"LOAD", 
                      u"TO", u"OR", u"AND", u"EQ", u"NEQ", u"GT", u"LT", 
                      u"GTEQ", u"LTEQ", u"PLUS", u"MINUS", u"MULT", u"DIV", 
                      u"MOD", u"POW", u"NOT", u"SCOL", u"ASSIGN", u"OPAR", 
                      u"CPAR", u"OBRACE", u"CBRACE", u"TRUE", u"FALSE", 
                      u"NIL", u"IF", u"ELSE", u"WHILE", u"FUNDEF", u"LOG", 
                      u"UNTIL", u"ID", u"INT", u"FLOAT", u"STRING", u"COMMENT", 
                      u"SPACE", u"OTHER" ]

    RULE_parse = 0
    RULE_block = 1
    RULE_stat = 2
    RULE_project = 3
    RULE_assignment = 4
    RULE_load = 5
    RULE_barchart = 6
    RULE_subby = 7
    RULE_header = 8
    RULE_run = 9
    RULE_statics = 10
    RULE_plot = 11
    RULE_bycol = 12
    RULE_cols = 13
    RULE_dbname = 14
    RULE_aggfuns = 15
    RULE_expr = 16
    RULE_atom = 17

    ruleNames =  [ u"parse", u"block", u"stat", u"project", u"assignment", 
                   u"load", u"barchart", u"subby", u"header", u"run", u"statics", 
                   u"plot", u"bycol", u"cols", u"dbname", u"aggfuns", u"expr", 
                   u"atom" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    LOAD=19
    TO=20
    OR=21
    AND=22
    EQ=23
    NEQ=24
    GT=25
    LT=26
    GTEQ=27
    LTEQ=28
    PLUS=29
    MINUS=30
    MULT=31
    DIV=32
    MOD=33
    POW=34
    NOT=35
    SCOL=36
    ASSIGN=37
    OPAR=38
    CPAR=39
    OBRACE=40
    CBRACE=41
    TRUE=42
    FALSE=43
    NIL=44
    IF=45
    ELSE=46
    WHILE=47
    FUNDEF=48
    LOG=49
    UNTIL=50
    ID=51
    INT=52
    FLOAT=53
    STRING=54
    COMMENT=55
    SPACE=56
    OTHER=57

    def __init__(self, input):
        super(deParser, self).__init__(input)
        self.checkVersion("4.6")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ParseContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(deParser.ParseContext, self).__init__(parent, invokingState)
            self.parser = parser

        def block(self):
            return self.getTypedRuleContext(deParser.BlockContext,0)


        def EOF(self):
            return self.getToken(deParser.EOF, 0)

        def getRuleIndex(self):
            return deParser.RULE_parse

        def enterRule(self, listener):
            if hasattr(listener, "enterParse"):
                listener.enterParse(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitParse"):
                listener.exitParse(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitParse"):
                return visitor.visitParse(self)
            else:
                return visitor.visitChildren(self)




    def parse(self):

        localctx = deParser.ParseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_parse)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 36
            self.block()
            self.state = 37
            self.match(deParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BlockContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(deParser.BlockContext, self).__init__(parent, invokingState)
            self.parser = parser

        def stat(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(deParser.StatContext)
            else:
                return self.getTypedRuleContext(deParser.StatContext,i)


        def project(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(deParser.ProjectContext)
            else:
                return self.getTypedRuleContext(deParser.ProjectContext,i)


        def getRuleIndex(self):
            return deParser.RULE_block

        def enterRule(self, listener):
            if hasattr(listener, "enterBlock"):
                listener.enterBlock(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitBlock"):
                listener.exitBlock(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitBlock"):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = deParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.state = 51
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 42
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << deParser.T__1) | (1 << deParser.T__6) | (1 << deParser.T__7) | (1 << deParser.T__10) | (1 << deParser.T__13) | (1 << deParser.T__14) | (1 << deParser.T__15) | (1 << deParser.T__16) | (1 << deParser.T__17) | (1 << deParser.LOAD) | (1 << deParser.ID))) != 0):
                    self.state = 39
                    self.stat()
                    self.state = 44
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 48
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==deParser.T__0:
                    self.state = 45
                    self.project()
                    self.state = 50
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(deParser.StatContext, self).__init__(parent, invokingState)
            self.parser = parser

        def assignment(self):
            return self.getTypedRuleContext(deParser.AssignmentContext,0)


        def load(self):
            return self.getTypedRuleContext(deParser.LoadContext,0)


        def statics(self):
            return self.getTypedRuleContext(deParser.StaticsContext,0)


        def plot(self):
            return self.getTypedRuleContext(deParser.PlotContext,0)


        def run(self):
            return self.getTypedRuleContext(deParser.RunContext,0)


        def header(self):
            return self.getTypedRuleContext(deParser.HeaderContext,0)


        def barchart(self):
            return self.getTypedRuleContext(deParser.BarchartContext,0)


        def getRuleIndex(self):
            return deParser.RULE_stat

        def enterRule(self, listener):
            if hasattr(listener, "enterStat"):
                listener.enterStat(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitStat"):
                listener.exitStat(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitStat"):
                return visitor.visitStat(self)
            else:
                return visitor.visitChildren(self)




    def stat(self):

        localctx = deParser.StatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_stat)
        try:
            self.state = 60
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [deParser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 53
                self.assignment()
                pass
            elif token in [deParser.LOAD]:
                self.enterOuterAlt(localctx, 2)
                self.state = 54
                self.load()
                pass
            elif token in [deParser.T__13, deParser.T__14, deParser.T__15, deParser.T__16, deParser.T__17]:
                self.enterOuterAlt(localctx, 3)
                self.state = 55
                self.statics()
                pass
            elif token in [deParser.T__10]:
                self.enterOuterAlt(localctx, 4)
                self.state = 56
                self.plot()
                pass
            elif token in [deParser.T__7]:
                self.enterOuterAlt(localctx, 5)
                self.state = 57
                self.run()
                pass
            elif token in [deParser.T__6]:
                self.enterOuterAlt(localctx, 6)
                self.state = 58
                self.header()
                pass
            elif token in [deParser.T__1]:
                self.enterOuterAlt(localctx, 7)
                self.state = 59
                self.barchart()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ProjectContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(deParser.ProjectContext, self).__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(deParser.ID, 0)

        def stat(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(deParser.StatContext)
            else:
                return self.getTypedRuleContext(deParser.StatContext,i)


        def getRuleIndex(self):
            return deParser.RULE_project

        def enterRule(self, listener):
            if hasattr(listener, "enterProject"):
                listener.enterProject(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitProject"):
                listener.exitProject(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitProject"):
                return visitor.visitProject(self)
            else:
                return visitor.visitChildren(self)




    def project(self):

        localctx = deParser.ProjectContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_project)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self.match(deParser.T__0)
            self.state = 63
            self.match(deParser.ID)
            self.state = 64
            self.match(deParser.OBRACE)
            self.state = 68
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << deParser.T__1) | (1 << deParser.T__6) | (1 << deParser.T__7) | (1 << deParser.T__10) | (1 << deParser.T__13) | (1 << deParser.T__14) | (1 << deParser.T__15) | (1 << deParser.T__16) | (1 << deParser.T__17) | (1 << deParser.LOAD) | (1 << deParser.ID))) != 0):
                self.state = 65
                self.stat()
                self.state = 70
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 71
            self.match(deParser.CBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AssignmentContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(deParser.AssignmentContext, self).__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(deParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(deParser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(deParser.ExprContext,0)


        def SCOL(self):
            return self.getToken(deParser.SCOL, 0)

        def getRuleIndex(self):
            return deParser.RULE_assignment

        def enterRule(self, listener):
            if hasattr(listener, "enterAssignment"):
                listener.enterAssignment(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitAssignment"):
                listener.exitAssignment(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitAssignment"):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = deParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            self.match(deParser.ID)
            self.state = 74
            self.match(deParser.ASSIGN)
            self.state = 75
            self.expr(0)
            self.state = 76
            self.match(deParser.SCOL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class LoadContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(deParser.LoadContext, self).__init__(parent, invokingState)
            self.parser = parser

        def LOAD(self):
            return self.getToken(deParser.LOAD, 0)

        def STRING(self):
            return self.getToken(deParser.STRING, 0)

        def TO(self):
            return self.getToken(deParser.TO, 0)

        def dbname(self):
            return self.getTypedRuleContext(deParser.DbnameContext,0)


        def getRuleIndex(self):
            return deParser.RULE_load

        def enterRule(self, listener):
            if hasattr(listener, "enterLoad"):
                listener.enterLoad(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitLoad"):
                listener.exitLoad(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitLoad"):
                return visitor.visitLoad(self)
            else:
                return visitor.visitChildren(self)




    def load(self):

        localctx = deParser.LoadContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_load)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.match(deParser.LOAD)
            self.state = 79
            self.match(deParser.STRING)
            self.state = 80
            self.match(deParser.TO)
            self.state = 81
            self.dbname()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BarchartContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(deParser.BarchartContext, self).__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(deParser.ID, 0)

        def cols(self):
            return self.getTypedRuleContext(deParser.ColsContext,0)


        def dbname(self):
            return self.getTypedRuleContext(deParser.DbnameContext,0)


        def subby(self):
            return self.getTypedRuleContext(deParser.SubbyContext,0)


        def getRuleIndex(self):
            return deParser.RULE_barchart

        def enterRule(self, listener):
            if hasattr(listener, "enterBarchart"):
                listener.enterBarchart(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitBarchart"):
                listener.exitBarchart(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitBarchart"):
                return visitor.visitBarchart(self)
            else:
                return visitor.visitChildren(self)




    def barchart(self):

        localctx = deParser.BarchartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_barchart)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.match(deParser.T__1)
            self.state = 84
            self.match(deParser.T__2)
            self.state = 85
            self.match(deParser.ID)
            self.state = 86
            self.match(deParser.T__3)
            self.state = 87
            self.cols()
            self.state = 89
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==deParser.T__5:
                self.state = 88
                self.subby()


            self.state = 91
            self.match(deParser.T__4)
            self.state = 92
            self.dbname()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SubbyContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(deParser.SubbyContext, self).__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(deParser.ID, 0)

        def getRuleIndex(self):
            return deParser.RULE_subby

        def enterRule(self, listener):
            if hasattr(listener, "enterSubby"):
                listener.enterSubby(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitSubby"):
                listener.exitSubby(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitSubby"):
                return visitor.visitSubby(self)
            else:
                return visitor.visitChildren(self)




    def subby(self):

        localctx = deParser.SubbyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_subby)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.match(deParser.T__5)
            self.state = 95
            self.match(deParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class HeaderContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(deParser.HeaderContext, self).__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i=None):
            if i is None:
                return self.getTokens(deParser.ID)
            else:
                return self.getToken(deParser.ID, i)

        def getRuleIndex(self):
            return deParser.RULE_header

        def enterRule(self, listener):
            if hasattr(listener, "enterHeader"):
                listener.enterHeader(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitHeader"):
                listener.exitHeader(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitHeader"):
                return visitor.visitHeader(self)
            else:
                return visitor.visitChildren(self)




    def header(self):

        localctx = deParser.HeaderContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_header)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.match(deParser.T__6)
            self.state = 98
            self.match(deParser.TO)
            self.state = 102
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 99
                    self.match(deParser.ID) 
                self.state = 104
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RunContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(deParser.RunContext, self).__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(deParser.STRING, 0)

        def getRuleIndex(self):
            return deParser.RULE_run

        def enterRule(self, listener):
            if hasattr(listener, "enterRun"):
                listener.enterRun(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitRun"):
                listener.exitRun(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitRun"):
                return visitor.visitRun(self)
            else:
                return visitor.visitChildren(self)




    def run(self):

        localctx = deParser.RunContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_run)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.match(deParser.T__7)
            self.state = 106
            self.match(deParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StaticsContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(deParser.StaticsContext, self).__init__(parent, invokingState)
            self.parser = parser

        def aggfuns(self):
            return self.getTypedRuleContext(deParser.AggfunsContext,0)


        def cols(self):
            return self.getTypedRuleContext(deParser.ColsContext,0)


        def dbname(self):
            return self.getTypedRuleContext(deParser.DbnameContext,0)


        def getRuleIndex(self):
            return deParser.RULE_statics

        def enterRule(self, listener):
            if hasattr(listener, "enterStatics"):
                listener.enterStatics(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitStatics"):
                listener.exitStatics(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitStatics"):
                return visitor.visitStatics(self)
            else:
                return visitor.visitChildren(self)




    def statics(self):

        localctx = deParser.StaticsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_statics)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.aggfuns()
            self.state = 109
            self.match(deParser.T__2)
            self.state = 110
            self.cols()
            self.state = 112
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==deParser.T__8:
                self.state = 111
                self.match(deParser.T__8)


            self.state = 115
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==deParser.T__9:
                self.state = 114
                self.match(deParser.T__9)


            self.state = 117
            self.match(deParser.T__4)
            self.state = 118
            self.dbname()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PlotContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(deParser.PlotContext, self).__init__(parent, invokingState)
            self.parser = parser

        def cols(self):
            return self.getTypedRuleContext(deParser.ColsContext,0)


        def dbname(self):
            return self.getTypedRuleContext(deParser.DbnameContext,0)


        def bycol(self):
            return self.getTypedRuleContext(deParser.BycolContext,0)


        def getRuleIndex(self):
            return deParser.RULE_plot

        def enterRule(self, listener):
            if hasattr(listener, "enterPlot"):
                listener.enterPlot(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitPlot"):
                listener.exitPlot(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitPlot"):
                return visitor.visitPlot(self)
            else:
                return visitor.visitChildren(self)




    def plot(self):

        localctx = deParser.PlotContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_plot)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.match(deParser.T__10)
            self.state = 121
            self.match(deParser.T__2)
            self.state = 122
            self.cols()
            self.state = 125
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==deParser.T__3:
                self.state = 123
                self.match(deParser.T__3)
                self.state = 124
                self.bycol()


            self.state = 127
            self.match(deParser.T__4)
            self.state = 128
            self.dbname()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BycolContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(deParser.BycolContext, self).__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(deParser.ID, 0)

        def getRuleIndex(self):
            return deParser.RULE_bycol

        def enterRule(self, listener):
            if hasattr(listener, "enterBycol"):
                listener.enterBycol(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitBycol"):
                listener.exitBycol(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitBycol"):
                return visitor.visitBycol(self)
            else:
                return visitor.visitChildren(self)




    def bycol(self):

        localctx = deParser.BycolContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_bycol)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.match(deParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ColsContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(deParser.ColsContext, self).__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i=None):
            if i is None:
                return self.getTokens(deParser.ID)
            else:
                return self.getToken(deParser.ID, i)

        def getRuleIndex(self):
            return deParser.RULE_cols

        def enterRule(self, listener):
            if hasattr(listener, "enterCols"):
                listener.enterCols(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitCols"):
                listener.exitCols(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitCols"):
                return visitor.visitCols(self)
            else:
                return visitor.visitChildren(self)




    def cols(self):

        localctx = deParser.ColsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_cols)
        self._la = 0 # Token type
        try:
            self.state = 141
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [deParser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 132
                self.match(deParser.ID)
                self.state = 137
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==deParser.T__11:
                    self.state = 133
                    self.match(deParser.T__11)
                    self.state = 134
                    self.match(deParser.ID)
                    self.state = 139
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            elif token in [deParser.T__12]:
                self.enterOuterAlt(localctx, 2)
                self.state = 140
                self.match(deParser.T__12)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DbnameContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(deParser.DbnameContext, self).__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(deParser.ID, 0)

        def getRuleIndex(self):
            return deParser.RULE_dbname

        def enterRule(self, listener):
            if hasattr(listener, "enterDbname"):
                listener.enterDbname(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitDbname"):
                listener.exitDbname(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitDbname"):
                return visitor.visitDbname(self)
            else:
                return visitor.visitChildren(self)




    def dbname(self):

        localctx = deParser.DbnameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_dbname)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            self.match(deParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AggfunsContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(deParser.AggfunsContext, self).__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return deParser.RULE_aggfuns

     
        def copyFrom(self, ctx):
            super(deParser.AggfunsContext, self).copyFrom(ctx)



    class AggStdContext(AggfunsContext):

        def __init__(self, parser, ctx): # actually a deParser.AggfunsContext)
            super(deParser.AggStdContext, self).__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener):
            if hasattr(listener, "enterAggStd"):
                listener.enterAggStd(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitAggStd"):
                listener.exitAggStd(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitAggStd"):
                return visitor.visitAggStd(self)
            else:
                return visitor.visitChildren(self)


    class AggMedianContext(AggfunsContext):

        def __init__(self, parser, ctx): # actually a deParser.AggfunsContext)
            super(deParser.AggMedianContext, self).__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener):
            if hasattr(listener, "enterAggMedian"):
                listener.enterAggMedian(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitAggMedian"):
                listener.exitAggMedian(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitAggMedian"):
                return visitor.visitAggMedian(self)
            else:
                return visitor.visitChildren(self)


    class AggVarContext(AggfunsContext):

        def __init__(self, parser, ctx): # actually a deParser.AggfunsContext)
            super(deParser.AggVarContext, self).__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener):
            if hasattr(listener, "enterAggVar"):
                listener.enterAggVar(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitAggVar"):
                listener.exitAggVar(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitAggVar"):
                return visitor.visitAggVar(self)
            else:
                return visitor.visitChildren(self)


    class AggDescContext(AggfunsContext):
